refactor: Product 엔터티 리팩터링 및 검증 로직 개선
- Product 생성자 통합: 옵션 여부와 관계없이 단일 create 메서드 사용
- Apache Commons Lang3 의존성 추가 및 StringUtils 활용으로 null 체크 개선
- 재고 기반 초기 상태 결정 로직 추가 (재고 0인 경우 OUTOFSTOCK으로 생성)
- 상태 변경 메서드 세분화: changeToSale/changeToOutOfStock/changeToClose
- 판매 타입 변경 메서드 세분화: changeToNew/changeToOld
- 재고 검증 로직을 canDecreaseStock/canIncreaseStock으로 분리
- ProductImage 검증 로직 개선: Optional 사용으로 대표 이미지 검증 최적화
- ProductOption null 체크 개선: CollectionUtils 활용
- 테스트 코드 리팩터링: 중복 코드 제거 및 가독성 향상